--- a/index.html
+++ b/index.html
@@ -6,16 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive Card</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/brands.min.css"
+    />
   </head>
   <body>
     <div class="card">
       <div class="profile-sidebar">
         <!-- placeholder server -->
-        <img src="https://i.pravatar.cc/125" alt="" />
-        <ul>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
+        <img class="profile-image" src="https://i.pravatar.cc/125" alt="" />
+        <ul class="social-list">
+          <li class="sotial-item">
+            <a aria-label="dribbble" class="social-link" href="#"
+              ><i class="fab fa-dribbble-square"></i
+            ></a>
+          </li>
+          <li class="sotial-item">
+            <a aria-label="facebook" class="social-link" href="#"
+              ><i class="fa-brands fa-square-facebook"></i></a>
+          </li>
+          <li class="sotial-item">
+            <a aria-label="twitter" class="social-link" href="#"
+              ><i class="fab fa-twitter-square"></i
+            ></a>
+          </li>
         </ul>
       </div>
       <div class="profile-main">
